fix so night mode doesn't make the whole thing unreadable, didn't know REACT had that by default

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  --color-font-main: rgba(255, 255, 255, 0.87);
+  --color-background-main: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -56,8 +56,8 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    --color-font-main: #213547;
+    --color-background-main: #ffffff;
   }
   a:hover {
     color: #747bff;
