--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,11 @@ ROOT
     --color-backing: #edf2f8;
     --color-grey: #ccc;
 
+    /*
+    --color-font-main: black;
+    --color-background-main: white;
+*/
+
     --borderRadius: 1em;
     --margin-default: 1.5em;
     --footer-height: 3em;
@@ -53,7 +58,7 @@ INPUT SECTION
     width: var(--leftSideWidth);
     
 
-    background-color: white;
+    background-color: var(--color-background-main);
     border-radius: 1em;
     padding: 1em;
     border: 1px solid black;
@@ -94,6 +99,7 @@ RENDERED RESUME
     height: min(100%, calc(100vw - var(--leftSideWidth)));
     */
     max-height: 100%;
-    background: white;
+    background: var(--color-background-main);
     overflow: hidden;
+        /* align-self: center; */
 }
